addedd favicon and changed background color

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Audio Convertor(vice-versa)</title>
+    <title>Text to Audio Convertor</title>
+    <link rel="icon" type="image/x-icon" href="text-to-speech.png">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="main">
-        <div id="heading"><h1>Text <a href="https://www.flaticon.com/free-icons/versa" title="versa icons"><img src="arrows.png" alt="" height="50vw" width="60vw"></a> Audio <span>Convertor</span></h1></div>
+        <div id="heading"><h1>Text To Audio <span>Convertor</span></h1></div>
         <textarea placeholder="Write something..."  id="textarea" ></textarea>
         <div id="row">
             <select name="" id=""></select>
             <button><h4>Listen</h4></button>
-            <button id="click_to_convert"><h4>Speak</h4></button>
+            
         </div>
     </div>
     <script src="script.js"></script>
